Fix background-image not showing

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 body {
     background-color: var(--main-color);
     margin: 0px;
-    /* height: 100vh; */
 
     padding-top: 200px;
     font-family: 'Roboto', sans-serif;
@@ -17,14 +16,13 @@ body {
 
 #main-content {
     display: flex;
-    /* height: 90vh; */
 }
 
 
 
 /* image */
 #background {
-    background-image: url('/images/cat-blerg.jpg');
+    background-image: url('../images/cat-blerg.jpg');
     background-size: 150%;
     background-repeat: no-repeat;
     background-position: 50% 65%;
@@ -84,7 +82,6 @@ a:hover, a:focus {
 }
 
 #form > p {
-    /* width: max(600px); */
     width: clamp(500px, 50%, 600px);
     margin: 0px;
 }
@@ -126,7 +123,6 @@ form {
 }
 
 form > div:not(:first-child) {
-    /* color: black; */
     width: 45%;
 }
 
